CSS/style.css
* {
  box-sizing: border-box;
}

/* Main styles */

h1 {
   font-size: 4.8em;
   color: #fff;
   padding-bottom: 30px;
   padding-top: 20px;
   margin: 0;
   line-height: 1.15em;
   font-family: AlbraText-Bold;
   font-weight: normal;
   font-style: normal;
   max-width: 1050px;
}

h2 {
  font-size: 2.8em;
  color: #101010;
  padding-top: 50px;
  padding-bottom: 15px;
  margin: 0;
  font-family: AlbraText-Semi;
  font-weight: normal;
  font-style: normal;
}

h3 {
  font-size: 2em;
  color: #000;
  margin: 0;
  padding: 25px 0 15px 0;
  font-family: AlbraText-Semi;
  font-weight: normal;
  font-style: normal;
}

p {
  font-family: 'Lato', sans-serif;
  color: #fff;
  font-size: 1.3em;
  margin: 0px;
  line-height: 1.5em;
  max-width: 1050px;
  text-align: left;
}

.projects {
  padding-left: 16%;
  padding-right: 16%
  padding-top: 30px;
  padding-bottom: 60px;
  display: inline-block;
}

.projects a:hover {
  box-shadow: 0 10px 10px black;
}

.grid-item {
  padding: 0 25px 0 0;
  width: 100%;
}

.grid-col1 {
  float: left;
  width: 33%;
  min-width: 300px;
  padding: 10px 0 25px 0;
}

.grid-col2 {
  float: left;
  width: 33%;
  min-width: 300px;
  padding: 10px 0 25px 0;
}

.grid-col3 {
  float: left;
  width: 33%;
  min-width: 300px;
  padding: 10px 0 25px 0;
}

.card--radius {
  border-radius: 5px;
  min-height: 100%
}

.card-thumb {
  border-radius: 5px 5px 0 0;
  background-repeat: no-repeat;
  background: white;
  background-size: cover;
  background-position: center center;
  min-height: 140px;
}

.card {
  background-color: #fff;
}

.card h3 {
  font-family: 'Lato', sans-serif;
  color: black;
  font-weight: 600;
  font-size: 1.1em;
  padding: 0 0 8px 0;
  margin: 0;
}

.card p {
  font-size: 1em;
  color: black;
}

a {
  text-decoration: none;
  font-family: 'Lato', sans-serif;
}

.pa4 {
  padding: 16px 20px  18px 20px;
}

.white-button {
  padding-left: 26px;
  padding-right: 26px;
  padding-top: 14px;
  padding-bottom: 14px;
  background-color: #000;
  color: #fff;
  border-radius: 30px;
  border: 2px solid white;
  font-size: 1.1em;
}

.hero-button a:hover {
  background-color: #fff;
  color: #000;
}

.black-button {
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 12px;
  padding-bottom: 12px;
  background-color: #E9EAEB;
  color: #000;
  border-radius: 30px;
  border: 2px solid #000;
  font-size: 1.1em;
  margin-top: 18px;
}

#hero {
  padding-left: 16%;
  padding-top: 170px;
  padding-bottom: 130px;
  padding-right: 20%;
  background-color: #101010;
  margin: 0;
}

#main {
    background-color: #E9EAEB;
}

.nav-bar {
  position: fixed;
  background-color: #101010;
  height: 70px;
  width: 100%;
  margin: 0;
}

.logo {
  float: left;
  color: white;
  font-family: AlbraText-Semi;
  font-weight: normal;
  font-style: normal;
  font-size: 1.8em;
  padding: 14px 0px 16px 35px;
  min-width: 80px;
  width: 85px;
}

.nav {
  list-style-type: none;
  margin: 0 30px 0 0;
  padding: 0;
  font-family: 'Lato', sans-serif;
  min-width: 300px;

}

li {
  float: right;
  padding-top: 14px;
}

li a {
  display: block;
  padding: 10px 12px;
  margin: 0 1px;
  text-decoration: none;
  color: white;
}

li a:hover, a:active {
  background-color: #222222;
  border-radius: 5px;
}

body {
  background-color: white;
  margin: 0px;
}

.about {
  clear: both;
  background-color: #fff;
  padding: 0 20% 80px 16%;
  display: flex;
}

.col1 {
  float: left;
  width: 50%;
  max-width: 850px;
  min-width: 440px;
  padding: 0 60px 30px 0;
}

.col2 {
  float: left;
  padding: 30px 0 0 0;
  width: 40%;
  max-width: 400px;
  min-width: 300px;
}

.about p, .about h2 {
  color: #000;
}

.about p {
  font-size: 1.2em;
}

.experience-card {
  background-color: #efefef;
  padding: 18px 18px 20px 20px;
  border-radius: 5px;
  margin: 0 0 14px 0;
}

.experience-card h3 {
  font-family: 'Lato', sans-serif;
  font-weight: 600;
  font-size: 1.3em;
  margin: 0;
  padding: 6px 0 10px 0;
  color: #000;
}

.experience-card p {
  font-size: 1.1em;
}


/* Media queries */

@media (max-width: 1000px) {

.col1 {
  min-width: 0;
  width: 100%;
  padding-right: 0;
}

.col2 {
  width: 100%;
  max-width: 100%;
}

.experience-card {
  max-width: 500px
}

.grid-col1 {
  float: left;
  width: 40%;
  min-width: 250px;
}

.grid-col2 {
  float: left;
  width: 40%;
  min-width: 250px;
}

.grid-col3 {
  float: left;
  width: 40%;
  min-width: 250px;
}

}

@media (max-width: 720px) {

  h1 {
     font-size: 3.5em;
     max-width:  90%;
     min-width: 200px;
   }

   #hero {
     padding-left: 10%;
     padding-top: 140px;
     padding-bottom: 100px;
     padding-right: 10%;
   }

   .projects {
       padding-left: 10%;
       padding-top: 20px;
       padding-bottom: 40px;
   }

   .about {
     margin-bottom: 30px;
     background-color: #fff;
     padding: 30px 10% 80px 10%;
     display: flex;
   }

   p {
     font-size: 1.1em;
   }

   .col2 {
     width: 100%;
     max-width: 100%;
   }

   .grid-col1 {
     float: left;
     width: 90%;
   }

   .grid-col2 {
     float: left;
     width: 90%;
   }

   .grid-col3 {
     float: left;
     width: 90%;
   }


}

@media (max-width: 480px) {

  h1 {
     font-size: 2.5em;
     max-width: 90%;
     min-width: 200px;
   }

   h2 {
     font-size: 2em;
   }

  p {
    font-size: 1.1em;
  }

  #hero {
    padding-left: 10%;
    padding-top: 130px;
    padding-bottom: 80px;
    padding-right: 10%;
  }

  .projects {
      padding-left: 10%;
      padding-top: 30px;
      padding-bottom: 60px;
  }

  .about {
    margin-bottom: 30px;
    background-color: #fff;
    padding: 30px 10% 80px 10%;
    display: flex;
    max-width: 90%;
  }

  .logo {
    font-size: 1.6em;
    padding: 16px 0px 16px 25px;
  }

  .nav {
    margin: 0 25px 0 0;

  }

  li a {
    margin: 0 1px;
    padding-left: 10px;
    padding-right: 10px;
  }

.about-text {
  max-width: 480px;
}

.col1 {
  padding: 0;
  min-width: 0;
}

.col2 {
  width: 100%;
}


.about p, .about h2 {
  margin: 0;
  min-width: auto;
  color: #000;
}

.grid-col1 {
  float: left;
  width: 95%;
}

.grid-col2 {
  float: left;
  width: 95%;
}

.grid-col3 {
  float: left;
  width: 95%;
}

}

/* Fonts */

.Albra-Semi {
	font-family: Albra-Semi;
	font-weight: normal;
	font-style: normal;
}
.Albra-Black {
	font-family: Albra-Black;
	font-weight: normal;
	font-style: normal;
}
.Albra-Bold {
	font-family: Albra-Bold;
	font-weight: normal;
	font-style: normal;
}
.Albra-Light {
	font-family: Albra-Light;
	font-weight: normal;
	font-style: normal;
}
.Albra-Medium {
	font-family: Albra-Medium;
	font-weight: normal;
	font-style: normal;
}
.Albra-Regular {
	font-family: Albra-Regular;
	font-weight: normal;
	font-style: normal;
}
.AlbraText-Bold {
	font-family: AlbraText-Bold;
	font-weight: normal;
	font-style: normal;
}
.AlbraText-Black {
	font-family: AlbraText-Black;
	font-weight: normal;
	font-style: normal;
}
.AlbraText-Medium {
	font-family: AlbraText-Medium;
	font-weight: normal;
	font-style: normal;
}
.AlbraText-Light {
	font-family: AlbraText-Light;
	font-weight: normal;
	font-style: normal;
}
.AlbraText-Regular {
	font-family: AlbraText-Regular;
	font-weight: normal;
	font-style: normal;
}
.AlbraText-Semi {
	font-family: AlbraText-Semi;
	font-weight: normal;
	font-style: normal;
}

